--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -172,7 +172,7 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Troba'm<i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: marcvindeldev@gmail.com</p>
+                            <p><i class="uil uil-envelope"></i> Email: marcvindeldev&#64;gmail.com</p>
                             <p><i class="uil uil-phone"></i> +34 642 38 08 09</p>
                         </div>
                     </div>
