--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,15 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="assets/profile.png" alt="avatar">
+                        <div class="atropos my-atropos">
+                            <div class="atropos-scale">
+                              <div class="atropos-rotate">
+                                <div class="atropos-inner">
+                                  <img src="assets/profile.png" alt="avatar">
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -146,17 +154,17 @@
                     <div class="project-box">
                         <!-- <img src="egma.png"> -->
                         <h3>EGMA Solutions</h3>
-                        <!-- <label>15+ Finished Projects</label> -->
+                        <label>Web de la meva empressa</label>
                     </div>
                     <div class="project-box">
                         <!-- <i class="uil uil-users-alt"></i> -->
                         <h3>Gastrobacus</h3>
-                        <!-- <label>25+ Happy Clients</label> -->
+                        <label>App per un client</label>
                     </div>
                     <div class="project-box">
                         <!-- <i class="uil uil-award"></i> -->
                         <h3>El Mirall</h3>
-                        <!-- <label>7+ Years in the field</label> -->
+                        <label>Web per un client</label>
                     </div>
                 </div>
             </section>
@@ -228,8 +236,5 @@
                 </p>
             </div>
         </footer>
-
     </div>
-
-    
 </body>
