--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,240 +1,12 @@
 <body>
     <div class="container">
-        <!-- --------------- HEADER --------------- -->
-        <nav id="header">
-            <div class="nav-logo">
-                <p class="nav-name">marcvindeldev</p>
-                <span>.</span>
-            </div>
-            <div class="nav-menu" id="myNavMenu">
-                <ul class="nav_menu_list">
-                    <li class="nav_list" (click)="closeMenu()">
-                        <a href="#home" class="nav-link active-link">Inici</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list" (click)="closeMenu()">
-                        <a href="#about" class="nav-link">Sobre mi</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list" (click)="closeMenu()">
-                        <a href="#projects" class="nav-link">Projectes</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list" (click)="closeMenu()">
-                        <a href="#contact" class="nav-link">Contacte</a>
-                        <div class="circle"></div>
-                    </li>
-                </ul>
-            </div>
-            <!-- <div class="nav-button">
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
-            </div> -->
-            <div class="nav-menu-btn">
-                <i class="uil uil-bars" (click)="myMenuFunction()"></i>
-            </div>
-        </nav>
-
-
-        <!-- -------------- MAIN ---------------- -->
+        <app-header></app-header>
         <main class="wrapper">
-            <!-- -------------- FEATURED BOX ---------------- -->
-            <section class="featured-box" id="home">
-                <div class="featured-text">
-                    <div class="featured-text-card">
-                        <span>Marc Vindel Marsal</span>
-                    </div>
-                    <div class="featured-name">
-                        <p>Soc <span class="typedText"></span></p>
-                    </div>
-                    <div class="featured-text-info">
-                        <p>
-                            Hola, sóc un desenvolupador Full Stack amb experiència en la creació d'aplicacions web
-                            completes. Domino tecnologies com HTML, CSS i JavaScript al front-end, juntament amb
-                            frameworks com Angular i React. Al back-end, utilitzo Node.js i PHP i bases de dades com MySQL i
-                            MongoDB. Destaco per la meva capacitat per treballar en equips multidisciplinaris i per la
-                            meva voluntat constant de millora.
-                        </p>
-                    </div>
-                    <div class="featured-text-btn">
-                        <button class="btn blue-btn">Contacta'm</button>
-                        <button class="btn">Descarrega el meu CV <i class="uil uil-file-alt"></i></button>
-                    </div>
-                    <div class="social_icons">
-                        <a href="https://www.instagram.com/marcvindel_/" target="_blank"><div class="icon"><i class="uil uil-instagram"></i></div></a>
-                        <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                        <div class="icon"><i class="uil uil-twitter"></i></div>
-                        <a href="https://github.com/mvindel-dev" target="_blank"><div class="icon"><i class="uil uil-github-alt"></i></div></a>
-                    </div>
-                </div>
-                <div class="featured-image">
-                    <div class="image">
-                        <div class="atropos my-atropos">
-                            <div class="atropos-scale">
-                              <div class="atropos-rotate">
-                                <div class="atropos-inner">
-                                  <img src="assets/profile.png" alt="avatar">
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-                <div class="scroll-icon-box">
-                    <a href="#about" class="scroll-btn">
-                        <i class="uil uil-mouse-alt"></i>
-                        <p>Desplaça avall</p>
-                    </a>
-                </div>
-
-            </section>
-            <!-- -------------- ABOUT BOX ---------------- -->
-            <section class="section" id="about">
-                <div class="top-header">
-                    <h1>Sobre mi</h1>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="about-info">
-                            <h3>Qui soc jo?</h3>
-                            <p>Hola, sóc un desenvolupador Full Stack amb experiència en la creació d'aplicacions web
-                                completes. Domino tecnologies com HTML, CSS i JavaScript al front-end, juntament amb
-                                frameworks com Angular i React. Al back-end, utilitzo Node.js i PHP i bases de dades com MySQL i
-                                MongoDB. Destaco per la meva capacitat per treballar en equips multidisciplinaris i per la
-                                meva voluntat constant de millora.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Frontend</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>Bootstrap</span>
-                                <span>JavaScript</span>
-                                <span>Vue</span>
-                                <span>React</span>
-                                <span>Angular</span>
-                            </div>
-                        </div>
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Backend</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>PHP</span>
-                                <span>JAVA</span>
-                                <span>Python</span>
-                                <span>C++</span>
-                            </div>
-                        </div>
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Database</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>MySQL</span>
-                                <span>PostgreSQL</span>
-                                <span>MongoDB</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- -------------- PROJECT BOX ---------------- -->
-
-            <section class="section" id="projects">
-                <div class="top-header">
-                    <h1>Projectes</h1>
-                </div>
-                <div class="project-container">
-                    <div class="project-box">
-                        <!-- <img src="egma.png"> -->
-                        <h3>EGMA Solutions</h3>
-                        <label>Web de la meva empressa</label>
-                    </div>
-                    <div class="project-box">
-                        <!-- <i class="uil uil-users-alt"></i> -->
-                        <h3>Gastrobacus</h3>
-                        <label>App per un client</label>
-                    </div>
-                    <div class="project-box">
-                        <!-- <i class="uil uil-award"></i> -->
-                        <h3>El Mirall</h3>
-                        <label>Web per un client</label>
-                    </div>
-                </div>
-            </section>
-
-            <!-- -------------- CONTACT BOX ---------------- -->
-
-            <section class="section" id="contact">
-                <div class="top-header">
-                    <h1>Posat en contacte amb mi</h1>
-                    <span>Tens un projecte en ment? Contacta amb mi i fem-lo realitat</span>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="contact-info">
-                            <h2>Troba'm<i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: marcvindeldev&#64;gmail.com</p>
-                            <p><i class="uil uil-phone"></i> +34 642 38 08 09</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-control">
-                            <div class="form-inputs">
-                                <input type="text" class="input-field" placeholder="Nom">
-                                <input type="text" class="input-field" placeholder="Email">
-                            </div>
-                            <div class="text-area">
-                                <textarea placeholder="Missatge"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="btn">Enviar <i class="uil uil-message"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
+            <app-top></app-top>
+            <app-about></app-about>
+            <app-projects></app-projects>
+            <app-contact></app-contact>
         </main>
-
-
-        <!-- --------------- FOOTER --------------- -->
-        <footer>
-            <div class="top-footer">
-                <p>marcvindeldev .</p>
-            </div>
-            <div class="middle-footer">
-                <ul class="footer-menu">
-                    <li class="footer_menu_list">
-                        <a href="#home">Inici</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#about">Sobre mi</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#projects">Projectes</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#contact">Contacte</a>
-                    </li>
-                </ul>
-            </div> 
-            <div class="social_icons_bottom">
-                <a href="https://www.instagram.com/marcvindel_/" target="_blank"><div class="icon"><i class="uil uil-instagram"></i></div></a>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-twitter"></i></div>
-                <a href="https://github.com/mvindel-dev" target="_blank"><div class="icon"><i class="uil uil-github-alt"></i></div></a>
-            </div>
-            <div class="bottom-footer">
-                <p>&copy; 2024<a href="#home" style="text-decoration: none;"> Marc Vindel Marsal</a> - Tots els drets reservats
-                </p>
-            </div>
-        </footer>
+        <app-footer></app-footer>
     </div>
 </body>
